--- a/src/components/songsList/songsList.css
+++ b/src/components/songsList/songsList.css
@@ -5,12 +5,22 @@ ul li {
 h3 {
   text-align: center;
   padding-top: 3px;
+  transition: text-shadow 0.3s ease-in-out;
+}
+
+
+h3:hover {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 h2 {
   text-align: center;
   padding-top: 3px;
+  transition: text-shadow 0.3s ease-in-out;
+}
 
+h2:hover {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 p {
