--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,3 +8,12 @@
 .footer-container {
   padding-right: 35px;
 }
+
+#main-playlist-link {
+  margin-bottom: 10px;
+  margin-left: 30px;
+}
+
+#main-playlist-link:hover {
+  background-color: #5f4daf !important;
+}
