--- a/src/components/playlistList/playlistList.css
+++ b/src/components/playlistList/playlistList.css
@@ -1,7 +1,9 @@
-h3 {
+h3 a{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-decoration: none !important;
+    color: black;
 }
-
+  
 p {
     font-family: Arial, Helvetica, sans-serif;
 }
