--- a/src/components/playlistList/playlistList.css
+++ b/src/components/playlistList/playlistList.css
@@ -2,6 +2,7 @@ h3 a{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: none !important;
     color: black;
+    
 }
   
 p {
@@ -15,7 +16,11 @@ p {
 
 @media (max-width: 768px) {
     #main-image {
-      width: 360px;
-      height: 241px;
+      width: 340px;
+      height: 240px;
     }
   }
+
+li {
+    list-style-type: none;
+}
