--- a/src/components/playlistList/playlistList.css
+++ b/src/components/playlistList/playlistList.css
@@ -2,12 +2,19 @@ h3 a{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: none !important;
     color: black;
-    
+    transition: color 0.3s;
 }
 
 h3 :hover {
     color: crimson ;
 }
+
+.fab-button:hover {
+transform: rotate(360deg); 
+background-color: #8E677E
+}
+
+
   
 p {
     font-family: Arial, Helvetica, sans-serif;
